objects/StateProvince__c.object
<CustomObject>
    <description>Set of states/provinces by country used for address data consistency and integrity</description>
    <fields>
        <fullName>Code__c</fullName>
        <inlineHelpText>Contains the State/Province code value (typically 2 or 3 characters).</inlineHelpText>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States/Provinces</relationshipLabel>
        <relationshipName>StatesProvinces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Alt__c</fullName>
        <inlineHelpText>Contains the local country version of the state/province long name.</inlineHelpText>
        <label>Name (Alt)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Group__c</fullName>
        <label>State Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Super_Group__c</fullName>
        <label>State Super Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_to_Validate__c</fullName>
        <inlineHelpText>Value to validate State/Province against (may contain abbreviation/short name or long name).</inlineHelpText>
        <label>Value to Validate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>State/Province</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Name_Alt__c</columns>
        <columns>Value_to_Validate__c</columns>
        <columns>State_Group__c</columns>
        <columns>State_Super_Group__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Canada</fullName>
        <columns>NAME</columns>
        <columns>Value_to_Validate__c</columns>
        <columns>State_Group__c</columns>
        <columns>State_Super_Group__c</columns>
        <columns>Country__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>Canada</label>
    </listViews>
    <listViews>
        <fullName>United_States</fullName>
        <columns>NAME</columns>
        <columns>Value_to_Validate__c</columns>
        <columns>State_Group__c</columns>
        <columns>State_Super_Group__c</columns>
        <columns>Country__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United States</value>
        </filters>
        <label>United States</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States/Provinces</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>